# iccad-contest-b

./: .gitignore  CMakeLists.txt  README.md
cases/: sampleCase2  sampleCase3
docs/: main.tex
include/: Bin.h  Cell.h  Comb.h  FF.h  LegalPlacer.h  Legalizer.h  Net.h  Pin.h  Renderer.h  Site.h  Solver.h  param.h  util.h
scripts/: clean  cmake_init  prof  run_sample  run_sample2  run_sample3  run_testcase  run_testcase2  run_testcase2_v2  run_testcase3  run_testcase_b  set_alias  test_all  test_sample  test_sample2  test_testcase  test_testcase2  test_testcase2   test_testcase_b
src/: Bin.cpp  CMakeLists.txt  Cell.cpp  Comb.cpp  FF.cpp  LegalPlacer.cpp  Legalizer.cpp  Net.cpp  Pin.cpp  Renderer.cpp  Site.cpp  Solver.cpp  main.cpp  test.cpp
